--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,43 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['person',\n",
-       " 'car',\n",
-       " 'chair',\n",
-       " 'bottle',\n",
-       " 'pottedplant',\n",
-       " 'bird',\n",
-       " 'dog',\n",
-       " 'sofa',\n",
-       " 'bicycle',\n",
-       " 'horse',\n",
-       " 'boat',\n",
-       " 'motorbike',\n",
-       " 'cat',\n",
-       " 'tvmonitor',\n",
-       " 'cow',\n",
-       " 'sheep',\n",
-       " 'aeroplane',\n",
-       " 'train',\n",
-       " 'diningtable',\n",
-       " 'bus']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Load data.yaml file (config)\n",
     "YOLO_DIR = \"yolov5-old/\"\n",
-    "with open(YOLO_DIR + 'data.yaml', 'r') as f:\n",
+    "with open(pjoin(YOLO_DIR, 'data.yaml'), 'r') as f:\n",
     "    # this is a dict\n",
     "    data_yaml = yaml.load(f, Loader=SafeLoader)\n",
     "\n",
@@ -70,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ WARN:0@49.722] global /io/opencv/modules/dnn/src/net_impl.cpp (179) setUpNet DNN module was not built with CUDA backend; switching to CPU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Let the model make predictions\n",
     "def one_prediction(img_input, model, YOLO_IMG_SZ = (640, 640) ):\n",
@@ -148,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,21 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 97, 124, 134, 105, 199, 201, 216,  34, 128,  75,  39, 127],\n",
-       "      dtype=int32)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "index, conf_list, bbox_list, id_list = nonmax_sup(pred, img_input)\n",
     "index"
@@ -213,52 +163,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chair: 86.5%\n",
-      "chair: 80.7%\n",
-      "chair: 77.1%\n",
-      "chair: 75.2%\n",
-      "chair: 74.1%\n",
-      "chair: 71.6%\n",
-      "bicycle: 56.0%\n",
-      "boat: 33.9%\n",
-      "chair: 30.5%\n",
-      "cat: 27.5%\n",
-      "cat: 14.3%\n",
-      "chair: 12.7%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6. Draw bbox\n",
     "## We want each bbox to have a tag (word instead of id) and a probability\n",
-    "for idx in index:\n",
-    "    # retrieve info\n",
-    "    x_left, y_top, width, height = bbox_list[idx]\n",
-    "    conf = conf_list[idx] * 100\n",
-    "    tag = labels[ id_list[idx] ]\n",
+    "img_input, orig_image, image  = load_img(fname)\n",
+    "def draw_bbox():\n",
+    "    for idx in index:\n",
+    "        # retrieve info\n",
+    "        x_left, y_top, width, height = bbox_list[idx]\n",
+    "        conf = conf_list[idx] * 100\n",
+    "        tag = labels[ id_list[idx] ]\n",
     "\n",
-    "    # format text display\n",
-    "    text = f\"{tag}: {conf:.1f}%\"\n",
-    "    print(text)\n",
+    "        # format text display\n",
+    "        text = f\"{tag}: {conf:.1f}%\"\n",
+    "        print(text)\n",
     "\n",
-    "    # cv2.rectangle(image, top-left, bot-right, box colr, thickness)\n",
-    "    GREEN = (0, 255, 0)\n",
-    "    BLACK = (0, 0, 0)\n",
-    "    cv2.rectangle(image, (x_left, y_top), (x_left+width, y_top+height), GREEN, 2)\n",
-    "    cv2.putText(image, text, (x_left, y_top-10), cv2.FONT_HERSHEY_COMPLEX, 0.6, BLACK, 4)\n",
+    "        # cv2.rectangle(image, top-left, bot-right, box colr, thickness)\n",
+    "        GREEN = (0, 255, 0)\n",
+    "        BLACK = (0, 0, 0)\n",
+    "        cv2.rectangle(image, (x_left, y_top), (x_left+width, y_top+height), GREEN, 2)\n",
+    "        cv2.putText(image, text, (x_left, y_top-10), cv2.FONT_HERSHEY_PLAIN, 0.8, BLACK, 1)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
