--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "# 3. Load testing images\n",
     "# *** We can have variable size training images, but test images should be cropped to fixed sqaure size ***\n",
-    "def load_img(fname, img_dir=\"./test_data\"):\n",
+    "def load_data(fname, img_dir=\"./test_data\"):\n",
     "    orig_image = cv2.imread(pjoin(img_dir, fname))  # original image (to be compared with)\n",
     "    image = orig_image.copy()   # np ndarray\n",
     "    nrow, ncol, ch = image.shape\n",
@@ -79,7 +79,7 @@
     "\n",
     "\n",
     "fname = \"000229.jpg\"\n",
-    "img_input, orig_image, image  = load_img(fname)\n",
+    "img_input, orig_image, image  = load_data(fname)\n",
     "\n",
     "    \n",
     "\n"
@@ -169,7 +169,7 @@
    "source": [
     "# 6. Draw bbox\n",
     "## We want each bbox to have a tag (word instead of id) and a probability\n",
-    "img_input, orig_image, image  = load_img(fname)\n",
+    "img_input, orig_image, image  = load_data(fname)\n",
     "def draw_bbox():\n",
     "    for idx in index:\n",
     "        # retrieve info\n",
